--- a/backend/.env
+++ b/backend/.env
@@ -1,11 +1,33 @@
+# Database
+DATABASE_URL=sqlite:///./test.db
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_DB=eoex_main
 POSTGRES_USER=eoex_user
 POSTGRES_PASSWORD=eoex_password
+
+# Authentication
+SECRET_KEY=kcd-development-secret-key-change-in-production
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=30
+
+# Legacy Keys
 JWT_SECRET_KEY=your-secret-key-change-in-production
 ENCRYPTION_KEY=your-encryption-key-change-in-production
 API_GATEWAY_KEY=your-api-gateway-key-change-in-production
+
+# API Configuration
+API_V1_STR=/api/v1
+PROJECT_NAME=KCD API
+
+# Frontend
+FRONTEND_URL=http://localhost:3000
+CORS_ORIGINS=http://localhost:3000,http://localhost:5173
+
+# Environment
+ENVIRONMENT=development
+
+# Feature Flags
 ENABLE_GUEST_ACCESS=true
 ENABLE_AI_FEATURES=true
 ENABLE_3D_ELEMENTS=true
