Fix login by adjusting SQLite pooling and add argon2 backend

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,7 @@ pydantic-settings==2.4.0
 python-dotenv==1.0.0
 python-jose==3.3.0
 passlib==1.7.4
+argon2-cffi==23.1.0
 python-multipart==0.0.6
 email-validator==2.1.1
 python-slugify==8.0.1
