--- a/render.yaml
+++ b/render.yaml
@@ -17,9 +17,9 @@ services:
       - key: ACCESS_TOKEN_EXPIRE_MINUTES
         value: "30"
       - key: FRONTEND_URL
-        sync: false
+        value: https://kcd-frontend-2.onrender.com
       - key: CORS_ORIGINS
-        sync: false
+        value: https://kcd-frontend-2.onrender.com
   - type: web
     name: kcd-frontend
     env: static
@@ -30,4 +30,4 @@ services:
     staticPublishPath: dist
     envVars:
       - key: VITE_API_BASE_URL
-        sync: false
+        value: https://kcd-api-jf14.onrender.com
