Save current project state

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 # Database Configuration (for development/testing)
+DATABASE_URL=sqlite:///./kcd.db
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_DB=eoex_main_test
