--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "gitflow.disableOnRepo": true
+    "gitflow.disableOnRepo": true,
+    "python.defaultInterpreterPath": "/media/eoex/DOJO/CONSULTING/PROJECTS/TEST/EOEX/kcd/.venv/bin/python",
+    "python.terminal.activateEnvironment": true
 }
