--- a/render.yaml
+++ b/render.yaml
@@ -31,3 +31,5 @@ services:
     envVars:
       - key: VITE_API_BASE_URL
         value: https://kcd-backend-xeak.onrender.com
+      - key: VITE_API_BASE_LOCKED
+        value: "true"
